added results of second experiment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
-sentencepiece==0.1.83
+sentencepiece
 tensorflow==1.14.0
-tensorflow_hub==0.6.0
-tf_sentencepiece==0.1.83
+tensorflow_hub
+tf_sentencepiece
 bs4
-numpy==1.17.3
-scikit-learn==0.21.3
+numpy
+scikit-learn
 nltk==3.4.5
-more_itertools==7.2.0
+more_itertools
 spacy==2.2.1
 gensim==3.8.1
 tika==1.19
-matplotlib==3.1.1
+matplotlib
 pydotplus==2.0.2
 pandas==0.25.2
 git+https://github.com/guillaumegenthial/tf_metrics.git
 imbalanced-learn==0.5.0
 ray
 setproctitle
+psutil
