bugfix: Do not use code imported with sys.path.append inside ray distributed code: https://stackoverflow.com/questions/54338013/parallel-import-a-python-file-from-sibling-folder
bugfix: Do not use code imported with sys.path.append inside ray distributed code: https://stackoverflow.com/questions/54338013/parallel-import-a-python-file-from-sibling-folder

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+cython==0.29.0
 sentencepiece
 tensorflow==1.14.0
 tensorflow_hub
@@ -5,16 +6,17 @@ tf_sentencepiece
 bs4
 numpy
 scikit-learn
-nltk==3.4.5
+nltk
 more_itertools
-spacy==2.2.1
-gensim==3.8.1
-tika==1.19
+spacy
+gensim
+tika
 matplotlib
-pydotplus==2.0.2
-pandas==0.25.2
+pydotplus
+pandas
 git+https://github.com/guillaumegenthial/tf_metrics.git
-imbalanced-learn==0.5.0
+imbalanced-learn
 ray
+filelock
 setproctitle
 psutil
